update: use spring boot run multiple app